[gd_scene load_steps=11 format=3 uid="uid://cveyslejredww"]

[ext_resource type="Script" path="res://Scripts/Characters/Ants/SavedAnt.gd" id="1_r04i1"]
[ext_resource type="Texture2D" uid="uid://i32p3x27tqni" path="res://Sprites (Images)/Ninja Adventure - Asset Pack/Actor/Characters/Cavegirl/SpriteSheet.png" id="2_c0ic0"]
[ext_resource type="FontFile" uid="uid://6spv7bhy8j5j" path="res://Font/monogram/ttf/monogram.ttf" id="3_winht"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5dfhh"]
radius = 5.0
height = 12.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_413te"]
radius = 7.0
height = 16.0

[sub_resource type="Animation" id="Animation_k4eoa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_q772l"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_7pyr0"]
resource_name = "saved"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 6)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vxtpr"]
_data = {
"RESET": SubResource("Animation_k4eoa"),
"idle": SubResource("Animation_q772l"),
"saved": SubResource("Animation_7pyr0")
}

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_pw2by"]

[node name="SavedAnt" type="CharacterBody2D"]
texture_filter = 1
script = ExtResource("1_r04i1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_5dfhh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_c0ic0")
hframes = 4
vframes = 7

[node name="Area2D" type="Area2D" parent="." groups=["SavedAnt"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_413te")
debug_color = Color(0.695693, 0.489748, 0.196855, 0.42)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = -38.0
offset_top = -26.0
offset_right = 38.0
offset_bottom = -3.0
pivot_offset = Vector2(38, 12)
theme_override_fonts/font = ExtResource("3_winht")
theme_override_font_sizes/font_size = 16
text = "Help"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vxtpr")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_pw2by")
anim_player = NodePath("../AnimationPlayer")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
